# 2D-Minecraft

./: .gitignore  README.md
.github/workflows/: ci.yml
2D Minecraft v 1.0/: CMakeLists.txt  resource.h
2D Minecraft v 1.0/assets/data/: block.list  furnaceRecipe.list  generator.list  lootTable.list  recipe.list  splashTexts.list
2D Minecraft v 1.0/assets/data/biomes/: birchForest.list  plains.list  savanna.list  taiga.list
2D Minecraft v 1.0/assets/data/entity/: spawn.list
2D Minecraft v 1.0/assets/data/entity/model/: cow.list
2D Minecraft v 1.0/hdr/: Game.hpp
2D Minecraft v 1.0/hdr/audio/: Audio.hpp
2D Minecraft v 1.0/hdr/entity/: Collision.hpp  Gravity.hpp  ItemEntity.hpp  Mob.hpp  Model.hpp
2D Minecraft v 1.0/hdr/graphics/: Render.hpp  Window.hpp
2D Minecraft v 1.0/hdr/graphics/lighting/: Light.hpp
2D Minecraft v 1.0/hdr/inventory/: Item.hpp  LootTable.hpp  Recipe.hpp
2D Minecraft v 1.0/hdr/util/: Loader.hpp  Random.hpp
2D Minecraft v 1.0/hdr/world/: Chunk.hpp  Tile.hpp  World.hpp
2D Minecraft v 1.0/src/: Game.cpp
2D Minecraft v 1.0/src/entity/: Collision.cpp  Gravity.cpp  Model.cpp  Player.cpp
2D Minecraft v 1.0/src/graphics/lighting/: Lighting.cpp
2D Minecraft v 1.0/src/inventory/: Item.cpp
2D Minecraft v 1.0/src/util/: Random.cpp
2D Minecraft v 1.0/src/world/: Biome.cpp  Chunk.cpp  GameTime.cpp  Generation.cpp  Generator.cpp  PathFinding.cpp  TileEntity.cpp  World.cpp
version 1.0/2D Minecraft/: gameProperties.sav
version 1.0/2D Minecraft/assets/data/: item.list  light.list  recipe.list  wall.list
version 1.0/2D Minecraft/hdr/: Resources.hpp
version 1.0/2D Minecraft/src/: main.cpp
(+44 files in other folders)
